# hft-latency-lab

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: parser_bench.rs
docs/: KNOWN_LIMITATIONS.md  hardware-profile.md  honest-discipline.md  measuremente-checklist.md  optimization-log-template.md  phase1-foundation.md  phase2-itchy.md  phase3-pipeline.md  phase4-microarch.md  phase5-kernel.md  plan-overview.md
docs/baselines/: phase1-baseline.md  phase2-optimization-log.md  phase4-microarch-experiments.md
scripts/: bench-env-check.sh  perf-stat.sh
src/: bench_env.rs  histogram.rs  latency_buf.rs  lib.rs  main.rs  microarch.rs  timer.rs
src/data/: gen.rs
src/net/: io_uring_bench.rs  mod.rs  packet_timer.rs  raw_socket.rs
src/orderbook/: arena.rs  book.rs  mod.rs
src/parser/: bitmap64.rs  bitmap_filter.rs  diff.rs  mod.rs  naive.rs  optimized.rs
src/pipeline/: mod.rs  spsc.rs
src/strategy/: circuit_breaker.rs  cointegration.rs  ekf.rs  execution_path.rs  mod.rs  pipeline.rs  quality_gate.rs
tests/: differential.rs
