[package]
name = "hft-latency-lab"
version = "0.1.0"
edition = "2021"
description = "HFT latency engineering training ground: ITCH parsing, order book, microarchitecture optimization"

[dependencies]
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = true
overflow-checks = false

[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true
overflow-checks = false

[[bench]]
name = "parser_bench"
harness = false

[features]
default = []
stats = []
